[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.0.2",
]

[project.scripts]
todo_mcp = "todo_mcp:run"

[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }
py-modules = ["todo_mcp","todo_db"]

[tool.setuptools.packages.find]
where = [ "." ]

